--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,24 @@
-# Site settings
-title: Dylan Rose
-subtitle: Vision/Data
-email: rose.dy@husky.neu.edu
-description: > # this means to ignore newlines until "baseurl:"
-I'm Dylan Rose, and I'm a graduate student at Northeastern University's brand-spanking-new Translational Vision Research Lab. I study the effects of neurological and ophthalmic disease on oculomotor control in complex tasks and try to design assistive technologies to remediate these deficits.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# Dependencies
+markdown:         redcarpet
+pygments:         true
 
-# Build settings
-markdown: kramdown
+# Permalinks
+permalink:        pretty
+
+# Setup
+title:            Lanyon
+tagline:          'A Jekyll theme'
+description:      'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:              http://lanyon.getpoole.com
+
+author:
+  name:           'Mark Otto'
+  url:            https://twitter.com/mdo
+
+paginate:         5
+
+# Custom vars
+version:          2.0.0
+
+github:
+  repo:           https://github.com/poole/lanyon
