edited config.yml to include an excerpt separator

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,6 @@ permalink:        pretty
 title:            Dylan Rose
 tagline:          'Vision/Data Science'
 url:              http://hamcastle1.github.io
-
 paginate:         4
+excerpt_separator: <!--more-->
 
